--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
       </nav>
 
       <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
+      </section>
       <section>
         <ul>
           <li>
@@ -57,29 +58,46 @@
           </li>
         </ul>
       </section>
+
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="./images/img1.jpg" alt="клавіатура" /></li>
-          <li><img src="./images/img2.jpg" alt="ноутбук" /></li>
-          <li><img src="./images/img33.jpg" alt="малюнок" /></li>
+          <li><img src="./images/img1.jpg" alt="клавіатура" width="370" /></li>
+          <li><img src="./images/img2.jpg" alt="ноутбук" width="370" /></li>
+          <li><img src="./images/img33.jpg" alt="малюнок" width="370" /></li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
-          <li><img src="./images/img.jpg" alt="" />
-          <h3>Ігор Дем'яненко</h3>
-          <p>Product Designer</p></li>
-          <li><img src="./images/img21.jpg" alt="" />
-          <h3>Ольга Рєпіна</h3>
-          <p>Frontend Developer</p></li>
-          <li><img src="./images/img3.jpg" alt="" />
-          <h3>Микола Тарасов</h3>
-        <p>Marketing</p></li>
-          <li><img src="./images/img4.jpg" alt="" />
-          <h3>Михайло Єрмаков</h3>
-        <p>UI Designer</p></li>
+          <li>
+            <img src="./images/img.jpg" alt="Хлопець в окулярах" width="270" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img21.jpg"
+              alt="Дівчина в окулярах"
+              width="270"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="Хлопець посміхається"
+              width="270"
+            />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img4.jpg" alt="Хлопець з бородою" width="270" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
